Fixed bug with white space after info cards of characters

--- a/src/app/components/view/characters/characters.component.scss
+++ b/src/app/components/view/characters/characters.component.scss
@@ -1,13 +1,7 @@
 /* image grid styles */
 .img-grid{
-    margin: 20px auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 40px;
-  }
-  .img-wrap{
-    height: 0;
-    padding: 25% 0;
-    position: relative;
-    opacity: 0.6;
-  }
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 40px;
+}
